# claude-collector

./: INSTALL.md  LICENSE  LLM.md  README.md  pyproject.toml
.github/workflows/: test.yml
claude_collector/: __init__.py  cli.py
tests/: __init__.py  test_sanitization.py
