[project]
name = "claude-collector"
version = "0.1.0"
description = "Extract and sanitize Claude Code conversation data for training datasets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hanzo AI", email = "hello@hanzo.ai"}
]
keywords = ["claude", "ai", "dataset", "training", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
claude-collector = "claude_collector.cli:main"

[project.urls]
Homepage = "https://github.com/hanzoai/claude-collector"
Repository = "https://github.com/hanzoai/claude-collector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
